[package]
name = "rng-vc"
version = "0.1.0"
authors = ["Joseph Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serenity = { version = "0.9.0-rc.2", features = ["voice"] }
tokio = { version = "0.2", features= ["macros"] }
